<resources>
    <string name="app_name">Task4-1_Workout_Timer</string>

    <string name="Start">START</string>
    <string name="Stop">PAUSE</string>
    <string name="WorkDuration">Work Duration (sec)</string>
    <string name="RestDuration">Rest Period (sec)</string>
    <string name="NumSets">Number of Sets</string>
    <string name="Title">Workout Timer</string>
    <string name="endTimer">00:00:00</string>
    <string name="WorkPhase">Work</string>
    <string name="RestPhase">Rest</string>
    <string name="EndPhase">Congratulations!</string>
    <string name="Reset">RESET</string>
    <string name="GoMainToCountdown">GO QUEEN!</string>
    <string name="GoCountdownToMain">Make it harder!</string>
</resources>