<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-3dp"
    tools:layout_editor_absoluteY="-6dp">

    <TextView
        android:id="@+id/myTextViewTitle"
        android:layout_width="350dp"
        android:layout_height="52dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/Title"
        android:textSize="40dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/myTextViewWorkDuration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/myTextViewRestDuration"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="7dp"
        android:gravity="bottom|left"
        android:text="@string/RestDuration"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/myTextViewNumSets"
        app:layout_constraintEnd_toStartOf="@+id/myEditTextRestPeriod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myTextViewWorkDuration" />

    <TextView
        android:id="@+id/myTextViewNumSets"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="10dp"
        android:gravity="bottom|left"
        android:text="@string/NumSets"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/myEditTextNumSets"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myTextViewRestDuration" />

    <EditText
        android:id="@+id/myEditTextRestPeriod"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/pink"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/myEditTextNumSets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/myTextViewRestDuration"
        app:layout_constraintTop_toBottomOf="@+id/myEditTextWorkDuration" />

    <EditText
        android:id="@+id/myEditTextWorkDuration"
        android:layout_width="100dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/pink"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/myEditTextRestPeriod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/myTextViewWorkDuration"
        app:layout_constraintTop_toBottomOf="@+id/myTextViewTitle" />

    <EditText
        android:id="@+id/myEditTextNumSets"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/pink"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/myTextViewNumSets"
        app:layout_constraintTop_toBottomOf="@+id/myEditTextRestPeriod" />

    <TextView
        android:id="@+id/myTextViewWorkDuration"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="7dp"
        android:gravity="bottom|left"
        android:text="@string/WorkDuration"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/myTextViewRestDuration"
        app:layout_constraintEnd_toStartOf="@+id/myEditTextWorkDuration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myTextViewTitle" />

    <Button
        android:id="@+id/myGoButton"
        android:layout_width="240dp"
        android:layout_height="111dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="214dp"
        android:text="@string/GoMainToCountdown"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myTextViewNumSets" />

</androidx.constraintlayout.widget.ConstraintLayout>